[package]
name = "ch19_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro_derive = { path = "/Users/Owner/Documents/GithubDesktop/Rust/Learning-Rust--/The_Book/Ch19/ch19_5/hello_macro_derive" }